# horizon-scope

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  app.py  config.yml  create_horizon_match_project.py  create_jupyter_notebook.py  pyproject.toml  requirements.txt  streamlit_app.py  structure.ipynb
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: horizon_projects.pkl  horizon_projects_embeddings.pkl
notebooks/: 01_project_data_preparation.ipynb  02_projects_token_analysis.ipynb  03_project_embeddings.ipynb  04_A_store_in_databse_pinecone.ipynb  04_B_store_in_databse_chroma.ipynb  04_store_in_databse_pinecone.ipynb  05_horizon-match-client-usage.ipynb  05_horizon_scope_client_usage.ipynb  projects-token-analysis.ipynb
src/horizon_match/application/interfaces/: comparison_service.py  vector_search_service.py
src/horizon_match/application/use_cases/: compare_projects.py
src/horizon_match/domain/entities/: comparison.py  comparison_result.py  horizon_match_result.py  project.py
src/horizon_match/infrastructure/config/: config_manager.py
src/horizon_match/infrastructure/services/: openai_comparison_service.py  pinecone_search_service.py  state_manager.py
src/horizon_match/presentation/: horizon_match_client.py  streamlit_app.py
src/horizon_scope/application/interfaces/: comparison_service.py  vector_search_service.py
src/horizon_scope/application/use_cases/: compare_projects.py
src/horizon_scope/domain/entities/: comparison.py  horizon_scope_result.py  project.py
src/horizon_scope/infrastructure/config/: config_manager.py
src/horizon_scope/infrastructure/services/: openai_comparison_service.py  pinecone_search_service.py
src/horizon_scope/presentation/: horizon_scope_client.py  streamlit_app.py  streamlit_presentation.py  streamlit_presentation_deprecated.py
tests/: test_compare_projects.py  test_config_manager.py  test_horizon_match_client.py  test_openai_comparison_service.py  test_pinecone_search_service.py
