[tool.poetry]
name = "horizon-match"
version = "0.1.0"
description = ""
authors = ["Florian Hegenbarth <florian@hegenbarth.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.42.0"
chromadb = "^0.5.5"
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
