[tool.poetry]
name = "horizon-scope"
version = "0.0.6"
description = ""
authors = ["Florian Hegenbarth <florian@hegenbarth.dev>"]
readme = "README.md"
packages = [{ include = "horizon_scope", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.42.0"
pinecone-client = { extras = ["grpc"], version = "^5.0.1" }
pinecone = "^5.0.1"
pyyaml = "^6.0.2"
pydantic = "^2.8.2"
streamlit = "^1.38.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
python-semantic-release = "^9.8.3"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.5"
tiktoken = "^0.7.0"
chromadb = "^0.5.5"
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "development"
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_version_number = true
tag_commit = false
upload_to_pypi = false
upload_to_repository = true
upload_to_release = false
hvcs = "github"
build_command = "pip install poetry && poetry build"

[tool.semantic_release.branches.development]
match = "(development)"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "chore"]
